chore: added headers

--- a/notebooks/leetcode_570.ipynb
+++ b/notebooks/leetcode_570.ipynb
@@ -34,6 +34,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2de88f05",
+   "metadata": {},
+   "source": [
+    "### Initial work"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "3d917f8b",
@@ -313,6 +321,14 @@
    ],
    "source": [
     "filtered_df['name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28c7d826",
+   "metadata": {},
+   "source": [
+    "### Final solution"
    ]
   },
   {
